@@ -1,3 +1,13 @@
+2011-01-06  Patrick Gansterer  <paroga@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        [WINCE] Remove JSC::g_stackBase
+        https://bugs.webkit.org/show_bug.cgi?id=51779
+
+        * platform/wince/SharedTimerWinCE.cpp:
+        (WebCore::TimerWindowWndProc):
+
 2011-01-06  Robert Hogan  <robert@webkit.org>
 
         Reviewed by Antonio Gomes.
